--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,22 @@
+autopep8==1.2.2
+defusedxml==0.4.1
 Django==1.9.4
+django-activity-stream==0.6.1
+django-allauth==0.25.2
+django-debug-toolbar==1.4
+django-guardian==1.4.2
+django-jsonfield==0.9.19
+django-reversion==1.10.1
+graphene==0.7.3
+graphql-core==0.4.12.1
+graphql-django-view==1.1.0
+graphql-relay==0.3.3
+oauthlib==1.0.3
+pep8==1.7.0
+python3-openid==3.0.9
+pytz==2016.3
+requests==2.9.1
+requests-oauthlib==0.6.1
+singledispatch==3.4.0.3
+six==1.10.0
+sqlparse==0.1.19
