--- a/web.3.4.config
+++ b/web.3.4.config
@@ -16,10 +16,9 @@
   <appSettings>
     <add key="WSGI_ALT_VIRTUALENV_HANDLER" value="django.core.wsgi.get_wsgi_application()" />
     <add key="WSGI_ALT_VIRTUALENV_ACTIVATE_THIS" value="D:\home\site\wwwroot\env\Scripts\python.exe" />
-    <add key="WSGI_HANDLER" value="django.core.wsgi.get_wsgi_application()" />
+    <add key="WSGI_HANDLER" value="ptvs_virtualenv_proxy.get_venv_handler()" />
     <add key="PYTHONPATH" value="D:\home\site\wwwroot" />
-    <!-- Change this to your settings eg: myapp.settings -->
-    <add key="DJANGO_SETTINGS_MODULE" value="autodous.settings_live" />
+    <add key="DJANGO_SETTINGS_MODULE" value="autodous.settings" />
     <!--
       Uncomment the following key/value to enable remote debugging.
       The following setting is meant to protect the debugging endpoint against
