--- a/requirements.txt
+++ b/requirements.txt
@@ -9,13 +9,16 @@ django-graphiql==0.4.4
 django-guardian==1.4.4
 django-pyodbc-azure==1.9.3.0
 django-reversion==1.10.2
-graphene==0.8.1
-graphql-core==0.4.18
-graphql-django-view==1.1.1
-graphql-relay==0.3.3
+django-storages==1.4.1
+graphene==0.9.1
+graphql-core==0.5
+graphql-django-view==1.3
+graphql-relay==0.4.1
+iso8601==0.1.11
 oauthlib==1.1.1
 pep8==1.7.0
 pyodbc==3.0.10
+pypromise==0.4
 python3-openid==3.0.10
 pytz==2016.4
 requests==2.10.0
