--- a/web.2.7.config
+++ b/web.2.7.config
@@ -34,6 +34,7 @@
     <compilation debug="true" targetFramework="4.0" />
     <!-- Required for websockets. -->
     <httpRuntime targetFramework="4.5"/>
+     <customErrors mode="Off"/>
   </system.web>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
